[package]
name = "mdm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = { version = "1.3.34", features = ["fltk-bundled"] }
fltk-theme = "0.6.0"
freedesktop_entry_parser = "1.3.0"
home = "0.5.4"
